zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/union_enum_field_missing.zig
const E = enum {
    a,
    b,
    c,
};

const U = union(E) {
    a: i32,
    b: f64,
};

export fn entry() usize {
    return @sizeOf(U);
}

// error
//
// :7:11: error: enum field 'c' missing from union
// :4:5: note: enum field here
